add humidity and visibility data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">YunBianWeather</string>
+    <string name="app_name">云边天气</string>
     <string name="forecast">预报</string>
     <string name="air_quality">空气质量</string>
     <string name="air_quality_level">空气质量等级</string>
@@ -7,6 +7,6 @@
     <string name="pm25">PM2.5指数</string>
     <string name="lifestyle">生活建议</string>
     <string name="bg_description">the background picture</string>
-    <string name="humidity">湿度</string>
+    <string name="humidity">相对湿度</string>
     <string name="visibility">能见度</string>
 </resources>
